--- a/style.css
+++ b/style.css
@@ -10,10 +10,16 @@ body {
     color: var(--branco-principal);
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .principal{
     background-image: url("img/background.png");
     background-repeat: no-repeat;
     background-size: contain;
+    grid-template-columns: 50% 50%;
 }
 
 .container {
