--- a/style.css
+++ b/style.css
@@ -60,3 +60,19 @@ margin: lem 0 2em 0;
 .secundario__imagem {
     width: 80%;
 }
+
+.secundario {
+ align-items: center;
+ margin: 0 10em;
+}
+
+.descricao__texto {
+    color: var(--cinza-secundario);
+}
+
+.descricao__titulo{
+    font-weight: 700;
+    font-size: 48px;
+    color:var(--branco-principal);
+    margin: 0.1em;
+}
