--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
+    --fonte-principal: 'Inter';
+    --botao-azul-efeito: #3c92fa;
 }
 
 body {
@@ -117,4 +119,17 @@ margin: lem 0 2em 0;
     margin: 1em 0;
     color: var(--cinza-secundario);
     font-size: 14px;
+}
+
+.lista__link a:hover {
+    outline-color:var(--botao-azul);
+}
+
+.lista__link a:active {
+    color: purple;
+}
+
+.container__botao:hover {
+    background-color: var(--botao-azul-efeito);
+    color:var(--cor-de-fundo);
 }
