--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 .principal{
-    background-image: url("background.png");
+    background-image: url("Background.png");
     background-repeat: no-repeat;
     background-size: contain;
     grid-template-columns: 50% 50%;
