--- a/style.css
+++ b/style.css
@@ -76,7 +76,11 @@ margin: lem 0 2em 0;
     font-weight: 700;
     font-size: 48px;
     color:var(--branco-principal);
-    margin: 0.1em;
+    margin-bottom: 0.1em;
+}
+
+.descricao__texto{
+    color:var(--cinza-secundario)
 }
 
 .secundario__botao {
@@ -115,6 +119,18 @@ margin: lem 0 2em 0;
     margin: 5em 3em;
 }
 
+.rodape__lista{
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin-top: 1em;
+}
+
+.lista__link a{
+    text-decoration: none;
+    color:var(--branco-principal);
+    margin-left: 1em;
+}
 .rodape__texto{
     margin: 1em 0;
     color: var(--cinza-secundario);
